--- a/UI/assets/design.css
+++ b/UI/assets/design.css
@@ -19,7 +19,7 @@ body{
     border-radius: 7px;
     margin-right:10%;
     margin-left: 20%;
-    margin-top: 40px;
+    margin-top: 10%;
     
 
 }
@@ -27,7 +27,7 @@ a{
     text-decoration: none;
     background-color: rgb(4, 1, 14);
     padding:10px;
-    padding-right: 450px;
+    padding-right: 20px;
     font-weight: bolder;
     color: #efefef;
 }
@@ -40,11 +40,13 @@ a:hover{
     cursor: pointer;
 }
  
- 
+ #menu{
+     width:100%;
+ }
   #banner{
     background-color: #000;
     width:100%;
-    height:100px;
+    height:50%;
     text-align: center;
     color: rgb(144, 210, 248);
     font-size: 200%;
@@ -53,21 +55,22 @@ a:hover{
   }
 
   #contents{
-      padding:150px;
+      padding:10%;
       line-height: 250%;
   }
 
 input[type=text]{
     width:60%;
-    height:40px;
+    height:35px;
 }
 input[type=email]{
     width:90%;
-    height:40px;
+    height:35px;
 }
 input[type=password]{
     width:90%;
-    height:40px;
+    height:20%;
+    height:35px;
 }
 input[type=button]{
     background-color: rgb(4, 1, 14);
@@ -75,6 +78,7 @@ input[type=button]{
     padding: 12px 20px;
     border-radius: 5px;
     width:90%;
+    
 }
 input[type=button]:hover{
     background-color: rgb(194, 195, 201);
@@ -98,6 +102,7 @@ ul li a{
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.126em;
     padding: 10px;
+   
 
 }
 ul li a:hover{
@@ -138,8 +143,37 @@ ul li a:hover{
     background-color:#cccccc;
     padding:10px;
     margin-top:20px;
-    height:173px;
+    height:300px;
 }
 .col1, .col2 {
     margin-right:20px;
 }
+select{
+    width:60%;
+    height:40px;
+
+}
+table{
+    text-align: center;
+    background-color: rgb(112, 158, 228);
+    width:100%;
+    height: 300px;
+}
+th{
+    background-color: darkslategray;
+    color:white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+td{
+    background-color: darkgray;
+    color:white;
+    
+}
+#footer{
+    text-align: center;
+}
+#add{
+    padding:50px;
+}
+
